# ml-by-spec

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: dataset_registry.py  download_datasets.py
specs/: 00_problem_spec.md  01_data_spec.md  02_preprocessing_spec.md  03_model_spec.md  04_automl_spec.md  05_evaluation_spec.md
src/ml_agent/: __init__.py  pipeline.py
src/ml_agent/automl/: __init__.py  automl.py  ensembler.py  screener.py  tuner.py
src/ml_agent/data/: __init__.py  loader.py  type_detector.py
src/ml_agent/evaluation/: __init__.py  metrics.py  plots.py  report.py
src/ml_agent/models/: __init__.py  base.py  boosting_models.py  deep_learning.py  registry.py  search_spaces.py  sklearn_models.py
src/ml_agent/preprocessing/: __init__.py  config.py  preprocessor.py  transformers.py
tests/: test_automl.py  test_data_loader.py  test_models.py  test_pipeline.py  test_preprocessor.py  test_type_detector.py
