[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ml-agent"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    # Core
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",

    # Boosting
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",

    # Deep Learning
    "torch>=2.0",
    "pytorch-tabnet>=4.0",

    # AutoML / Tuning
    "optuna>=3.4",

    # Experiment Tracking
    "mlflow>=2.9",

    # Explainability
    "shap>=0.44",

    # Benchmark Data
    "openml>=0.14",

    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
